# admissibility-receipt

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: build.yml  self-test.yml
activation/: gcat-bcat-intake-seed.json
docs/: POSITIONING_AI_SAFETY_TRANSITION_ADMISSIBILITY.md  USAGE.md
examples/: RECEIPT_SPEC.md  decision-event.json  sample-receipt.json
integration/: gcat-bcat-intake.json
iosnoperiod/: README.md
src/admissibility_receipt/: __init__.py  canon.py  fleet.py  generate.py  verify.py
tests/: test_receipt.py
tools/: verify_gcat_bcat_intake.py
