[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "admissibility-receipt"
version = "1.0.0"
description = "Generate, independently verify, and fleet-audit reproducible admissibility receipts. The proof layer for AdmittedCode."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "AdmittedCode" }]
keywords = ["admissibility","receipt","attestation","audit","governance","verifiable"]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
admissibility-generate = "admissibility_receipt.generate:main"
admissibility-verify = "admissibility_receipt.verify:main"
admissibility-fleet = "admissibility_receipt.fleet:main"

[tool.setuptools.packages.find]
where = ["src"]
